yaml/infra/shopping-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shoppingportal-ingress
  namespace: shoppingportal
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
#      - path: /ui
#        backend:
#          serviceName: k8uiworkshopservice
 #         servicePort: 80
      - path: /productms
        backend:
          serviceName: productservice
          servicePort: 80
      - path: /productreviewms
        backend:
          serviceName: productreviewservice
          servicePort: 80
